config.ini edited online with Bitbucket

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -1,6 +1,6 @@
 [database]
 host = localhost
-username = iseeyou
-password = 13579
-name = iseeyou_test
-prefix = reprologin_
+username = repropark_lk
+password = fqJdNH3BneDDPtPC
+name = repropark_lk
+prefix = repro_
