--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -4,3 +4,9 @@ username = repropark_lk
 password = fqJdNH3BneDDPtPC
 name = repropark_lk
 prefix = repro_
+
+[app]
+controllers = ../app/controllers/
+models = ../app/models/
+layouts = ../app/views/layouts/
+content = ../app/views/content/
