--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -10,3 +10,7 @@ controllers = ../app/controllers/
 models = ../app/models/
 layouts = ../app/views/layouts/
 content = ../app/views/content/
+
+[public]
+css = /css/
+js = /js/
