FTPManager и выгрузка XML заказа

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -5,6 +5,14 @@ password = fqJdNH3BneDDPtPC
 name = repropark_lk
 prefix = repro_
 
+[ftp]
+host = alphacrust.ru
+port = 21
+username = iseeyou
+password = 13579
+passive_mode = 1
+dir_orders = orders
+
 [app]
 controllers = ../app/controllers/
 models = ../app/models/
