фильтры, сортировка, в процессе

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -6,12 +6,12 @@ name = repropark_lk
 prefix = repro_
 
 [ftp]
-host = alphacrust.ru
+host = localhost
 port = 21
-username = iseeyou
-password = 13579
-passive_mode = 1
-dir_orders = orders
+username = repropark_lk
+password = ljcneg_R_cfqne
+passive_mode = 0
+dir_orders = dump/orders
 
 [app]
 controllers = ../app/controllers/
