загрузка файлов, привязка файлов к базе

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -10,8 +10,12 @@ host = localhost
 port = 21
 username = repropark_lk
 password = ljcneg_R_cfqne
+#username = lk_files
+#password = OAsdk_KksDi--
 passive_mode = 0
-dir_orders = dump/orders
+dir_root = dump
+dir_orders = orders
+dir_files = files
 
 [app]
 controllers = ../app/controllers/
