--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -8,10 +8,8 @@ prefix = repro_
 [ftp]
 host = localhost
 port = 21
-username = repropark_lk
-password = ljcneg_R_cfqne
-#username = lk_files
-#password = OAsdk_KksDi--
+username = lk_files
+password = OAsdk_KksDi--
 passive_mode = 0
 dir_root = dump
 dir_orders = orders
@@ -26,6 +24,10 @@ content = ../app/views/content/
 [public]
 css = /css/
 js = /js/
+
+[recaptcha]
+response_url = https://www.google.com/recaptcha/api/siteverify
+secret = 6LcSXA8TAAAAAEj8xT1TE4vcvHYdX0i6maN17yGE
 
 [admin]
 displaySQL = 0
