редактирование заказа с динамическими филдами просмотр филдов для конкретной страницы удаление филда

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -18,6 +18,7 @@ dir_files = files
 [app]
 controllers = ../app/controllers/
 models = ../app/models/
+forms = ../app/views/forms/
 layouts = ../app/views/layouts/
 content = ../app/views/content/
 
