апдейт: апрув, темплейты

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -25,6 +25,7 @@ content = ../app/views/content/
 [public]
 css = /css/
 js = /js/
+revisions = /revisions/
 
 [recaptcha]
 response_url = https://www.google.com/recaptcha/api/siteverify
