перенес из BaseController в WebController все что относится к вебу

--- a/app/config/config.ini
+++ b/app/config/config.ini
@@ -21,6 +21,8 @@ models = ../app/models/
 forms = ../app/views/forms/
 layouts = ../app/views/layouts/
 content = ../app/views/content/
+interfaces = ../core/interfaces/
+objects = ../core/objects/
 
 [public]
 css = /css/
